fix hero image spillover

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -92,6 +92,13 @@ nav ul li{
   height: 270px; 
 }
 
+.hero img{
+  max-width: 100%;
+  max-height: 95%; 
+  width: auto; 
+  height: auto; 
+}
+
 
 .features{
   display: none;
